# gh-notify-linux

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  uninstall.sh
.tasks/history/: 001-migrate-to-python.md  002-configurability.md  003-gen-sound.md
docs/adr/: 001-use-gh-api-for-notifications.md  002-use-dbus-notifications-with-body-markup.md  003-batch-multiple-notifications.md  004-use-systemd-user-timer.md  006-use-python-pipx.md
scripts/: gen-sound
src/gh_notify/: __main__.py
src/gh_notify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
systemd/: gh-notify.service  gh-notify.timer
